# lake-pulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE-MIT  README.md  licenserc.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pr-title.yml  release-plz.yml  release-pr-status.yml  security-audit.yml
docs/: LAKE_PULSE_SUPPORTED_STORAGES.md  README.md  feature-flags-strategy.md
examples/: README.md  Readme.md  adl_store.rs  ascii_gantt.rs  hdfs_store.rs  local_store.rs  local_store_custom.rs  local_store_hudi.rs  local_store_iceberg.rs  local_store_json.rs  local_store_lance.rs  local_store_paimon.rs  local_store_synthetic_deletion_vectors.rs  s3_store.rs
examples/data/: README.md  Readme.md
examples/data/delta_dataset/: .part-00000-61a9ec6a-71b0-4e67-9ca5-34b7a7c25c6f-c000.snappy.parquet.crc  .part-00000-c1e79ecd-4322-4d28-9575-a1a3bfc4e833-c000.snappy.parquet.crc  part-00000-61a9ec6a-71b0-4e67-9ca5-34b7a7c25c6f-c000.snappy.parquet
examples/data/delta_dataset/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc
examples/data/delta_dataset_with_features/: .part-00000-02e40338-54df-4346-a424-a81080065f4c-c000.snappy.parquet.crc  .part-00000-0e2036fb-5488-4575-a95d-bbdf97f51a5c-c000.snappy.parquet.crc  .part-00000-22d3005b-9ba2-403d-bfa0-6d0d2d2f57bc-c000.snappy.parquet.crc  .part-00000-5749b0fd-81cb-42ed-a1f7-c80396767629-c000.snappy.parquet.crc  .part-00000-6f7e633b-b0c8-4311-a387-8cb7f31624f5-c000.snappy.parquet.crc  .part-00000-c365610d-93a5-4042-9973-5c4b4187efca.c000.snappy.parquet.crc  .part-00000-c579c942-73fe-431f-8adb-bd6cd37cb08c-c000.snappy.parquet.crc  .part-00001-20a63484-90ce-4819-8fe1-268c9d453770-c000.snappy.parquet.crc  .part-00001-47ef0c63-afe2-4edf-b109-828d53e6929e-c000.snappy.parquet.crc  .part-00001-a0c49fb3-ca65-4e53-a810-9d9887547f93-c000.snappy.parquet.crc  .part-00001-ccf9be39-aa60-4c4a-8f7d-30d2f3d167e0-c000.snappy.parquet.crc  .part-00001-dfd3cd62-7e58-427e-97e2-2b0a822bfc2e-c000.snappy.parquet.crc  .part-00002-f8b6222a-6dde-450f-9b15-9eebb1edf212-c000.snappy.parquet.crc  part-00000-02e40338-54df-4346-a424-a81080065f4c-c000.snappy.parquet  part-00000-0e2036fb-5488-4575-a95d-bbdf97f51a5c-c000.snappy.parquet  part-00000-22d3005b-9ba2-403d-bfa0-6d0d2d2f57bc-c000.snappy.parquet  part-00000-5749b0fd-81cb-42ed-a1f7-c80396767629-c000.snappy.parquet  part-00000-6f7e633b-b0c8-4311-a387-8cb7f31624f5-c000.snappy.parquet  part-00000-c365610d-93a5-4042-9973-5c4b4187efca.c000.snappy.parquet  part-00000-c579c942-73fe-431f-8adb-bd6cd37cb08c-c000.snappy.parquet  part-00001-20a63484-90ce-4819-8fe1-268c9d453770-c000.snappy.parquet  part-00001-47ef0c63-afe2-4edf-b109-828d53e6929e-c000.snappy.parquet  part-00001-a0c49fb3-ca65-4e53-a810-9d9887547f93-c000.snappy.parquet  part-00001-ccf9be39-aa60-4c4a-8f7d-30d2f3d167e0-c000.snappy.parquet  part-00001-dfd3cd62-7e58-427e-97e2-2b0a822bfc2e-c000.snappy.parquet  part-00002-f8b6222a-6dde-450f-9b15-9eebb1edf212-c000.snappy.parquet
examples/data/delta_dataset_with_features/_change_data/: .cdc-00000-0cee1eab-11e3-4c40-a276-f3c38157fadd.c000.snappy.parquet.crc  cdc-00000-0cee1eab-11e3-4c40-a276-f3c38157fadd.c000.snappy.parquet
examples/data/delta_dataset_with_features/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.json.crc  .00000000000000000004.json.crc  (+5 more)
examples/data/delta_with_synthetic_deletion_vectors/: README.md
examples/data/hudi_dataset/: ..hoodie_partition_metadata.crc  .4873e419-5ff3-4f61-b3ce-5c852cee4583-0_0-23-123_20251110222213846.parquet.crc  .4873e419-5ff3-4f61-b3ce-5c852cee4583-0_0-52-250_20251110222339086.parquet.crc  .4873e419-5ff3-4f61-b3ce-5c852cee4583-0_0-81-342_20251110222404982.parquet.crc  .hoodie_partition_metadata  4873e419-5ff3-4f61-b3ce-5c852cee4583-0_0-23-123_20251110222213846.parquet  4873e419-5ff3-4f61-b3ce-5c852cee4583-0_0-52-250_20251110222339086.parquet  4873e419-5ff3-4f61-b3ce-5c852cee4583-0_0-81-342_20251110222404982.parquet
examples/data/iceberg_dataset/: fix_paths.sh
src/: lib.rs  main.rs
src/analyze/: analyze.rs  analyzer.rs  metrics.rs  mod.rs  table_analyzer.rs
src/analyze/common/: constants.rs  mod.rs  schema_change.rs  scoring.rs
src/analyze/delta/: analyze.rs  mod.rs
src/analyze/hudi/: analyze.rs  mod.rs
src/analyze/iceberg/: analyze.rs  mod.rs
src/analyze/lance/: analyze.rs  mod.rs
src/analyze/paimon/: analyze.rs  mod.rs
src/delta/: reader.rs
src/reader/: mod.rs
src/reader/delta/: metrics.rs  reader.rs
src/reader/hudi/: metrics.rs  mod.rs  reader.rs
src/reader/iceberg/: metrics.rs  mod.rs  reader.rs
src/reader/lance/: metrics.rs  mod.rs  reader.rs
src/reader/paimon/: metrics.rs  mod.rs  reader.rs
src/storage/: config.rs  error.rs  factory.rs  generic.rs  mod.rs  object_store.rs  provider.rs
src/util/: ascii_gantt.rs  helpers.rs  mod.rs  retry.rs  util.rs
(+94 files in other folders)
