[package]
name = "lake-pulse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust library for analyzing data lake table health across multiple formats and storage providers."
rust-version = "1.88"
keywords = ["lake", "pulse", "analyze"]
authors = ["Andrei Ionescu <aionescu@adobe.com>"]
repository = "https://github.com/aionescu_adobe/lake-pulse"
exclude = [ "examples/data/**/*", "examples/dont_commit_*" ]

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

deltalake = { version = "0.29", features = ["deltalake-aws", "deltalake-azure"] }
deltalake-azure = "0.12"
deltalake-aws = "0.12"
iceberg = { version = "0.7.0", features = ["storage-all"] }
lance = "0.39"

object_store = { version = "0.12", features = ["aws", "azure", "gcp"] }
url = "2.5"
async-trait = "0.1"
thiserror = "2.0"
futures = { version = "0.3", features = ["std"] }
bytes = "1.0"
chrono = "0.4"
log = "0.4.28"
regex = "1.12.2"
parquet = "56.2"




