[package]
name = "lake-pulse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust library for analyzing data lake table health across multiple formats and storage providers."
rust-version = "1.88"
keywords = ["lake", "pulse", "analyze"]
authors = ["Andrei Ionescu <webdev.andrei@gmail.com>"]
repository = "https://github.com/adobe/lake-pulse"
exclude = [ "examples/data/**/*" ]

[features]
default = ["delta", "iceberg"]
delta = ["dep:deltalake", "dep:deltalake-azure", "dep:deltalake-aws"]
iceberg = ["dep:iceberg"]
hudi = []
lance = ["dep:lance"]
experimental = ["hudi", "lance"]

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

deltalake = { version = "0.29", features = ["deltalake-aws", "deltalake-azure"], optional = true }
deltalake-azure = { version = "0.12", optional = true }
deltalake-aws = { version = "0.12", optional = true }
iceberg = { version = "0.7.0", features = ["storage-all"], optional = true }
lance = { version = "1.0", optional = true }

object_store = { version = "0.12", features = ["aws", "azure", "gcp"] }
url = "2.5"
async-trait = "0.1"
thiserror = "2.0"
futures = { version = "0.3", features = ["std"] }
bytes = "1.0"
chrono = "0.4"
log = "0.4.28"
regex = "1.12.2"
parquet = "57.1"

[dev-dependencies]
tempfile = "3.8"

# Examples with required features
[[example]]
name = "local_store"
required-features = ["delta"]

[[example]]
name = "local_store_custom"
required-features = ["delta"]

[[example]]
name = "local_store_json"
required-features = ["delta"]

[[example]]
name = "local_store_synthetic_deletion_vectors"
required-features = ["delta"]

[[example]]
name = "local_store_iceberg"
required-features = ["iceberg"]

[[example]]
name = "local_store_hudi"
required-features = ["hudi"]

[[example]]
name = "local_store_lance"
required-features = ["lance"]

[[example]]
name = "s3_store"

[[example]]
name = "adl_store"
